# svg-react-preview

./: .gitignore  Cargo.toml  Makefile  README.md  codecov.yml  deny.toml
.cargo/: mutants.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  coverage.yml  quality.yml  security.yml
src/: attr_map.rs  config.rs  defaults.rs  expand_selection.rs  lib.rs  main.rs  open_in_zed.rs  parse.rs  pipeline.rs  preview_effects.rs  serialize.rs  source.rs  static_eval.rs  transform.rs
tests/: cli.rs  transform.rs
tests/fixtures/: attr_normalization.tsx  cond_expr.tsx  dangerous_html.tsx  dynamic_size.tsx  fragment.tsx  full_svg.tsx  logical_and.tsx  pascal_case.tsx  path_only.tsx  spread.tsx
