[package]
name = "svg-react-preview"
version = "0.1.0"
edition = "2024"
description = "Preview inline JSX/TSX SVG fragments in Zed"
repository = "https://github.com/Segodnya/svg-react-preview"
license = "MIT"

[lib]
name = "svg_react_preview"
path = "src/lib.rs"

[[bin]]
name = "svg-react-preview"
path = "src/main.rs"

[dependencies]
swc_common      = "21"
swc_ecma_ast    = "23"
swc_ecma_parser = "39"
swc_ecma_visit  = "23"
anyhow          = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

# cargo-husky installs hooks via its build script when `cargo test` runs.
# `user-hooks` copies `.cargo-husky/hooks/*` into `.git/hooks/`.
[dev-dependencies.cargo-husky]
version          = "1"
default-features = false
features         = ["user-hooks"]
